--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola Bienvenido a mi pagina WEB
+        Hola Bienvenido a mi pagina WEB de prueba
     </p>
 </body>
 </html>
